offers and reservations
