# Tourismus.WebApp/Controllers/Users/Parameters/EditUserParameters.cs
@@ -1,0 +1,10 @@
+﻿namespace Tourismus.WebApp.Controllers.Users.Parameters {
+    public class EditUserParameters {
+        public int Id { get; set; }
+        public string FirstName { get; set; }
+        public string LastName { get; set; }
+        public string TelephoneNumber { get; set; }
+        public string Email { get; set; }
+        public string Password { get; set; }
+    }
+}
