# Tourismus.WebApp/ReadModels/Dtos/ControllerBase/User_Dto.cs
@@ -3,6 +3,7 @@ using Tourismus.Model.Models;
 
 namespace Tourismus.WebApp.ReadModels.Dtos.Single {
     public class User_Dto {
+        public int Id { get; set; }
         public string FirstName { get; set; }
         public string LastName { get; set; }
         public string TelephoneNumber { get; set; }
@@ -10,6 +11,5 @@ namespace Tourismus.WebApp.ReadModels.Dtos.Single {
         public DateTime AccountCreationDate { get; set; }
         public DateTime? LastSuccessfullyLogin { get; set; }
         public DateTime? LastUnsuccessfullyLoginAttempt { get; set; }
-        public Reservation[] Reservations { get; set; }
     }
 }
